--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,10 @@ services:
     build: .
     ports:
       - 8080:8080
+
+  mongodb:
+    image: bitnami/mongodb:latest
+    ports:
+      - 27017
+    volumes:
+      - /bitnami/mongodb
